fixed layout issue where bio text area was shrinking for smaller screen sizes and not maintaining its height for all screens for the same text area with the same text inside it

--- a/band-member-styles/shared-attr.css
+++ b/band-member-styles/shared-attr.css
@@ -3,6 +3,10 @@
   src: url("./assets/fonts/Switzer-Extralight.woff2") format("woff2");
 }
 
+html {
+  font-size: 16px;
+}
+
 body {
   margin: 0;
   background-repeat: cover;
@@ -17,25 +21,25 @@ h3 {
   flex-direction: column; /* stack children vertically */
   align-items: center; /* center them horizontally */
   justify-content: flex-start; /* keep everything at the top */
-  height: 100vh;
+  height: 95vh;
+  overflow: hidden;
 }
 
-.content-card {
+/* .content-card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 95vh;
-}
+  max-height: 95vh;
+  flex: 1;
+  overflow: hidden;
+} */
 
 #image-container {
   display: flex;
   justify-content: center;
-  /* position: relative; */
-  /* width: 16.5vw; */
+  position: relative;
   width: 22.7vmin;
   height: auto;
-  /* top: 1vh; */
-  /* margin-bottom: 2vh; */
 }
 
 #image-container img {
@@ -51,10 +55,23 @@ h3 {
   color: white;
   font-family: "Neon";
   word-spacing: 0.5rem;
-  /* font-size: 2rem; */
-  /* font-size: 3vw; */
-  font-size: 5.3vmin;
   margin-bottom: 0.5vh;
+}
+
+@media (max-width: 768px) {
+  #name-instrument {
+    font-size: 0.9rem;
+  }
+}
+@media (min-width: 769px) and (max-width: 1024px) {
+  #name-instrument {
+    font-size: 1.6rem;
+  }
+}
+@media (min-width: 1025px) {
+  #name-instrument {
+    font-size: 2.3rem;
+  }
 }
 .texts {
   display: flex;
@@ -62,16 +79,21 @@ h3 {
   /* .vert-direction does not control grand-children, only direct children of it. We need to specify flex direction for the children of .texts to follow since .vert-container has no effect on them */
   flex-direction: column;
   align-items: center;
-  /* font-size: 1rem; */
   font-size: 3vmin;
-  width: 95%;
-  /* height: 95vh; */
+  /* width: 95%; */
+  flex: 1;
+  min-height: 0; /* Allows for the content to shrink if its bigger than the parents content area */
 }
 
 .bio {
   margin-top: 0.5vh;
   color: white;
-  width: 50vw;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+
+  flex: 1;
+  min-height: 0;
 }
 
 .bio h3 {
@@ -81,14 +103,8 @@ h3 {
   /* font-size: 1.5rem; */
   font-size: 4vmin;
 }
-/* @media (min-width: 769px) {
-  .social-medias {
-    margin-top: 2px;
-    margin-bottom: 2px;
-  }
-} */
+
 .social-medias {
-  /* margin-top: 0.5rem; */
   /* margin-top: 1vh; */
   display: inline-flex;
   justify-content: flex-start;
@@ -104,11 +120,9 @@ h3 {
   margin-left: 1vw;
   text-decoration: none;
   align-self: center;
-  /* font-size: 1.5vw; */
-  font-size: 2.7vmin;
+  font-size: 3vh;
 }
 .social-medias img {
-  /* height: 3.5vh; */
   height: 4vmin;
   width: auto;
 }
@@ -116,11 +130,10 @@ h3 {
   margin-top: 0;
   padding: 0.2em 1em;
   border: 2px solid white;
-  /* box-sizing: border-box; */
-  /* min-height: 35vh; */
   /* Changed to a percentage so the space below the box remains more consistent */
   /* max-height: 90%; */
-  max-height: 45vh;
+  flex: 1;
+  min-height: 0;
   overflow-y: auto;
 }
 .bio-details h4 {
